--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -39,7 +39,7 @@ en:
       signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
       signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
-      updated: "Your account has been updated successfully."
+      updated: "Tu cuenta ha sido actualizada correctamente"
     sessions:
       signed_in: "Sesión iniciada correctamente"
       signed_out: "Sesión finalizada correctamente"
@@ -56,5 +56,5 @@ en:
       not_found: "not found"
       not_locked: "was not locked"
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
+        one: "Por favor corrija el siguiente error para continuar:"
         other: "Por favor corrija los siguientes errores para continuar:"
